header_nav__list update

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
                         <img src="images/logo.png" alt="no photo" />
                     </div>
                     <ul class="header_nav_list">
-                        <li class="icon`">Home</li>
-                        <li class="icon`">Product</li>
-                        <li class="icon`">Pricing</li>
-                        <li class="icon`">Testimonials</li>
-                        <li class="icon`">Contact Us</li>
-                        <li class="icon`">Buy Now</li>
+                        <li class="icon">Home</li>
+                        <li class="icon">Product</li>
+                        <li class="icon">Pricing</li>
+                        <li class="icon">Testimonials</li>
+                        <li class="icon">Contact Us</li>
+                        <li class="icon">Buy Now</li>
                     </ul>
                     <div class="button">
                         <button type="button">Buy Now</button>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </section>
-        </main>
+        
 
         <section class="delivery">
             <div class="container">
@@ -424,13 +424,13 @@
                             type="text"
                             placeholder="Enter your question"
                         />
-                        <button class="input_btn">SEND</button>
+                        <button class="btn-primary">SEND</button>
                     </div>
                 </div>
             </div>
         </section>
-
-        <section class="teble">
+    </main>
+        <footer class="teble">
             <div class="container table_wrapper">
                 <div class="table_1">
                     <img
@@ -482,7 +482,7 @@
                             type="text"
                             placeholder="Your Email"
                         />
-                        <button class="table_button">Subscribe</button>
+                        <button class="btn-primary">Subscribe</button>
                     </div>
 
                     <div class="table_payments">
@@ -492,6 +492,6 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </footer>
     </body>
 </html>
